--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
+    <title><%= full_title(yield(:title)) %></title>
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
@@ -13,6 +13,30 @@
   </head>
 
   <body>
+  <header class="navbar-nav navbar-expand-lg   navbar-fixed-top ">
+    <a class="navbar-brand" href="home">
+    <img src="app/javascript/stylesheets/images/logo.png" width="30" height="30" alt="">
+      Myapp
+    </a>
+      <div class="collapse navbar-collapse justify-content-end"  id="navbarNav">
+        <ul class="navbar-nav" >
+          <li class="nav-item active">
+            <a class="nav-link" href=home>Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href=help>Help</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href=about>About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+        </ul>
+    </div>
+  </header>
+  <div class="container">
     <%= yield %>
+  </div>
   </body>
 </html>
