finished navbar and added footer

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,7 @@
 <% provide(:title, "Home") %>
 <!DOCTYPE html>
-<p>
-  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
-</p>
-
+<body>
+<div class="d-grid gap-2">
+  <a href="help" class="btn btn-outline-dark" type="button">Sign Up Now</a>
+</div>
+</body>
