--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,16 +1,43 @@
 @import "/node_modules/bootstrap/scss/bootstrap";
-body {
-  padding-top: 60px;
+
+.btn {
+  margin-top: 250px;
+  margin-bottom: 200px;
 }
-section {
-  overflow: auto;
+
+.logo {
+  float: left;
+  margin-right: 10px;
+  font-size: 1.7em;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  padding-top: 9px;
+  font-weight: bold;
 }
-textarea {
-  resize: vertical;
+
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1;
 }
-.center {
+
+h1 {
+  font-size: 3em;
+  letter-spacing: -2px;
+  margin-top: 30px;
+  margin-bottom: 10px;
   text-align: center;
 }
-.center h1 {
-  margin-bottom: 10px;
+
+h2 {
+  font-size: 1.2em;
+  letter-spacing: -1px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-weight: normal;
+  color: #777;
+}
+
+p {
+  font-size: 1.1em;
+  line-height: 1.7em;
 }
