--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,32 +11,52 @@
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-  <header class="navbar-nav navbar-expand-lg   navbar-fixed-top ">
-    <a class="navbar-brand" href="home">
-    <img src="app/javascript/stylesheets/images/logo.png" width="30" height="30" alt="">
-      Myapp
-    </a>
-      <div class="collapse navbar-collapse justify-content-end"  id="navbarNav">
-        <ul class="navbar-nav" >
-          <li class="nav-item active">
-            <a class="nav-link" href=home>Home</a>
+  <header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand class logo" href="home">Myapp</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" d
+              ata-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+              aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end " id="navbarNav" >
+        <ul class="navbar-nav ">
+          <li class="nav-item">
+            <a class="nav-link"  href="home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href=help>Help</a>
+            <a class="nav-link" href="help">Help</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href=about>About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link" href="about">About</a>
           </li>
         </ul>
+      </div>
     </div>
+  </nav>
   </header>
+
   <div class="container">
     <%= yield %>
   </div>
+  <footer>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-end">
+    <div class="navbar-fixed-bottom  " id="navbarNav" >
+          <ul class="navbar-nav ">
+            <li class="nav-item">
+              <a class="nav-link"  href="home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="help">Help</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about">About</a>
+            </li>
+          </ul>
+        </div>
+    </nav>
+  </footer>
   </body>
 </html>
