--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,53 +10,14 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= render 'layouts/shim' %>
   </head>
   <body>
-  <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand class logo" href="home">Myapp</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" d
-              ata-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-              aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end " id="navbarNav" >
-        <ul class="navbar-nav ">
-          <li class="nav-item">
-            <a class="nav-link"  href="home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="help">Help</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about">About</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  </header>
-
+  <%= render 'layouts/header' %>
   <div class="container">
     <%= yield %>
   </div>
-  <footer>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-end">
-    <div class="navbar-fixed-bottom  " id="navbarNav" >
-          <ul class="navbar-nav ">
-            <li class="nav-item">
-              <a class="nav-link"  href="home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="help">Help</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about">About</a>
-            </li>
-          </ul>
-        </div>
-    </nav>
-  </footer>
+  <%= render 'layouts/footer' %>
+
   </body>
 </html>
