--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,6 +2,6 @@
 <!DOCTYPE html>
 <body>
 <div class="d-grid gap-2">
-  <a href="help" class="btn btn-outline-dark" type="button">Sign Up Now</a>
+  <a href="signup" class="btn btn-outline-dark" type="button">Sign Up Now</a>
 </div>
 </body>
