--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,15 +1,15 @@
 <footer>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-end">
-    <div class="navbar-fixed-bottom  " id="navbarNav" >
-      <ul class="navbar-nav ">
+    <div class="navbar-fixed-bottom1  " id="navbarNav" >
+      <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link"  href="home">Home</a>
+          <a class="nav-link"  href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="help">Help</a>
+          <a class="nav-link" href="/help">Help</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about">About</a>
+          <a class="nav-link" href="/about">About</a>
         </li>
       </ul>
     </div>
