--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,23 +1,38 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand class logo" href="home">Myapp</a>
+      <a class="navbar-brand class logo" href="/">Myapp</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
               aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse justify-content-end " id="navbarNav" >
+      <div class="collapse navbar-collapse  " id="navbarNav" >
         <ul class="navbar-nav ">
           <li class="nav-item">
-            <a class="nav-link"  href="home">Home</a>
+            <a class="nav-link"  href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="help">Help</a>
+            <a class="nav-link" href="/help">Help</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about">About</a>
+            <a class="nav-link" href="/about">About</a>
           </li>
+          <% if user_signed_in? == false %>
+            <a class="nav-link" href="/users/sign_in">Sign In</a>
+          <% end %>
+          <% if user_signed_in?%>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                <li><a class="dropdown-item" href="/users/edit">Edit</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="/users/sign_out" data-method="delete">Exit</a></li>
+              </ul>
+            </li>
+          <% end %>
         </ul>
       </div>
     </div>
