--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,6 +2,10 @@
 <!DOCTYPE html>
 <body>
 <div class="d-grid gap-2">
-  <a href="signup" class="btn btn-outline-dark" type="button">Sign Up Now</a>
+  <a href="/users/sign_up" class="btn btn-outline-dark" type="button">Sign Up Now</a>
+  <% if user_signed_in? %>
+    <%= link_to 'log out',  destroy_user_session_path, method: :delete%>
+  <% end %>
+  <a href="/users/sign" class="btn btn-outline-dark" type="button">Routes)</a>
 </div>
 </body>
