--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,22 +13,30 @@
             <a class="nav-link"  href="/">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/show-all-adverts">All Adverts</a>
+          </li>
+
+          <li class="nav-item">
             <a class="nav-link" href="/help">Help</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about">About</a>
           </li>
+
           <% if user_signed_in? == false %>
             <a class="nav-link" href="/users/sign_in">Sign In</a>
           <% end %>
           <% if user_signed_in?%>
+            <li class="nav-item">
+              <a class="nav-link" href="/show-my-adverts">My Adverts</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Dropdown
               </a>
               <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                <li><a class="dropdown-item" href="/show-all-users">Users</a></li>
                 <li><a class="dropdown-item" href="/users/edit">Edit</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li><a class="dropdown-item" href="/users/sign_out" data-method="delete">Exit</a></li>
               </ul>
             </li>
