--- a/app/views/adverts/_advert.html.erb
+++ b/app/views/adverts/_advert.html.erb
@@ -1,9 +1,11 @@
-<div class="card" align_con style="width: 50rem;">
-  <img src="..." class="card-img-top"  alt="...">
+<div class="card"  style="width: 50rem;">
+  <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title"><%= link_to advert.user.name %></h5>
+    <p class="card-text">Category <%= advert.category %> </p>
     <p class="card-text"><%= advert.content %></p>
-    <p class="card-text">Posted <%= time_ago_in_words(advert.created_at) %> ago.</p>
+    <p class="card-text">Posted at <%= advert.created_at %> .</p>
+    <p class="card-text">Status: <%= advert.status %> </p>
     <a href="#" class="btn btn-primary">See Full</a>
   </div>
 </div>
