Added edit for advert

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
     <a href="/users/sign_up" class="btn btn-outline-dark" type="button">Sign Up Now</a>
   <% else %>
     <h1> Hello <%= current_user.name %></h1>
-    <%= link_to 'log out', destroy_user_session_path, method: :delete %>
+    <%= link_to 'log out', destroy_user_session_path, method: :get %>
   <% end %>
 
 
