--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
           </li>
 
           <% if user_signed_in? == false %>
-            <a class="nav-link" href="/users/sign_in">Sign In</a>
+            <a class="nav-link" href="show-all-adverts">Sign In</a>
           <% end %>
           <% if user_signed_in?%>
             <li class="nav-item">
