--- a/app/views/adverts/edit.html.erb
+++ b/app/views/adverts/edit.html.erb
@@ -1,14 +1,14 @@
  <%= form_for(@advert) do |f| %>
     <div class="field">
       <%= f.label :category %>
-      <%= f.select :category, Advert.categories.keys, autocomplete: "category"%>
+      <%= f.select :category, @adverts.categories.keys, autocomplete: "category"%>
     </div>
     <div class="field">
       <%= f.text_area :content, autocomplete: "content"  %>
     </div>
    <div class="field">
      <%= f.label :status %>
-     <%= f.select :status,  Advert.statuses, autocomplete: "status"%>
+     <%= f.select :status,  Advert.statuses.keys, autocomplete: "status"%>
    </div>
 
    <p> <%= button_to "Update", advert_path(@advert), data: { confirm: "Are you sure?" },
