--- a/app/views/adverts/new_advert.html.erb
+++ b/app/views/adverts/new_advert.html.erb
@@ -25,7 +25,8 @@
             <p class="card-text"><%= advert.content %></p>
             <p class="card-text">Posted at <%= advert.created_at %> .</p>
             <p class="card-text">Status: <%= advert.status %> </p>
-            <p> <%= button_to "Edit Advert", edit_advert_path(advert.id), method: :get %></p>
+            <p> <%= button_to "Edit Advert", edit_advert_path(advert.id),
+                              method: :get if policy(advert).update? %></p>
           </div>
         </div>
       </ol>
