--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <h1>All users</h1>
 <% @users.each do |user| %>
   <li>
-    <h3><%= link_to user.name %>-<%= user.roles.pluck(:name) %></h3>
+    <h3><%= link_to user.name %>-<%= user.roles.where(resource_type: nil).pluck(:name) %></h3>
   </li>
 <% end %>
 
