--- a/app/views/adverts/new_advert.html.erb
+++ b/app/views/adverts/new_advert.html.erb
@@ -12,6 +12,7 @@
     </section>
   </aside>
   <div class="col-md-8">
+    <div><h3><%= paginate @adverts %></h3></div>
     <% if current_user.adverts.any? %>
       <h3>My Adverts (<%= current_user.adverts.count %>)</h3>
     <% end %>
@@ -31,5 +32,6 @@
         </div>
       </ol>
     <% end %>
+    <div><h3><%= paginate @adverts %></h3></div>
   </div>
 </div>
