--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,10 @@
 <% provide(:title, 'All users') %>
 <h1>All users</h1>
+<div><h3><%= paginate @users %></h3></div>
 <% @users.each do |user| %>
   <li>
     <h3><%= link_to user.name %>-<%= user.roles.where(resource_type: nil).pluck(:name) %></h3>
   </li>
 <% end %>
+<div><h3><%= paginate @users %></h3></div>
 
