--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
 <body>
 <div class="d-grid gap-2">
   <% if user_signed_in? == false %>
-    <a href="/users/sign_up" class="btn btn-outline-dark" type="button">Sign Up Now</a>
+    <a href="/my/users/sign_up" class="btn btn-outline-dark" type="button">Sign Up Now</a>
   <% else %>
     <h1> Hello <%= current_user.name %></h1>
     <%= link_to 'log out', destroy_user_session_path, method: :get %>
