--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,9 @@
 <div><h3><%= paginate @users %></h3></div>
 <% @users.each do |user| %>
   <li>
-    <h3><%= link_to user.name %>-<%= user.roles.where(resource_type: nil).pluck(:name) %></h3>
+    <h3><%= link_to user.name %> <%=  user.roles.where(resource_type: nil).pluck(:name)if policy(user).edit? %>
+      <%= link_to 'edit',  edit_user_path(user.id), method: :get if policy(user).edit?%></h3>
+
   </li>
 <% end %>
 <div><h3><%= paginate @users %></h3></div>
