Addede category filter for adverts

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -41,3 +41,8 @@ p {
   font-size: 1.1em;
   line-height: 1.7em;
 }
+.actions {
+  border-color: #730E15;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
